// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders HomePage correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Object {
        "height": 1334,
        "width": 750,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../images/background.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": 1334,
            "width": 750,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "marginBottom": 180,
          "paddingTop": 10,
        }
      }
    >
      <RCTScrollView
        data={Array []}
        disableVirtualization={false}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={false}
        initialNumToRender={10}
        keyExtractor={[Function]}
        maxToRenderPerBatch={10}
        onContentSizeChange={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View />
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`renders NewsPage correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      Object {
        "height": 1334,
        "width": 750,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../images/background.jpg",
        }
      }
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": 1334,
            "width": 750,
          },
          undefined,
        ]
      }
    />
    <RCTScrollView
      style={
        Object {
          "flex": 1,
          "marginBottom": 100,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "marginTop": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#3d3d5c",
                "flexDirection": "row",
                "fontSize": 30,
                "fontWeight": "bold",
                "marginBottom": 10,
                "marginTop": 50,
              }
            }
          >
            News and Reports
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
